Scrollbar Fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,7 +30,6 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  overflow-y: scroll;
 }
 
 h1, h2, h3 {
